[package]
name = "csgo-cheat-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "csgo_cheat_rs"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4.17"
once_cell = "1.13.1"
rand = "0.8.5"
hook-rs-lib = { path = "../hook-rs/hook-rs-lib", features = ["derive"] }
vtables = { path = "../vtables" }
vtables_derive = { path = "../vtables_derive" }
winapi = { version = "0.3.9", features = ["ntdef", "psapi", "minwindef", "memoryapi", "wincon", "libloaderapi", "minwinbase", "winnt", "ntstatus", "consoleapi", "winuser"] }