[package]
name = "csgo-cheat-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "csgo_cheat_rs"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["ntdef", "psapi", "minwindef", "memoryapi", "wincon", "libloaderapi", "minwinbase", "winnt", "ntstatus", "consoleapi", "winuser"] }
hook-rs-lib = { path = "../hook-rs/hook-rs-lib", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"]}
vtables_derive = { path = "../vtables_derive" }
vtables = { path = "../vtables" }
encryption-macros = "0.1.1"
pretty_env_logger = "0.4.0"
serde_json = "1.0.85"
once_cell = "1.13.1"
event-bus = "0.1.0"
bitflags = "1.3.2"
rand = "0.8.5"
log = "0.4.17"
color_space = "0.5.3"
widestring = "1.0.2"